--- a/cluster/nginx.yaml
+++ b/cluster/nginx.yaml
@@ -52,9 +52,11 @@ spec:
       app: nginx
   template:
     metadata:
-      name: nginx
       labels:
         app: nginx
     spec:
       containers:
-        image: nginx
+        - image: nginx
+          name: nginx
+          ports:
+            - containerPort: 80
