--- a/cluster/nginx.yaml
+++ b/cluster/nginx.yaml
@@ -28,7 +28,7 @@ metadata:
 spec:
   ingressClassName: kong
   rules:
-  - host: nginx.controldata.co.th
+  - host: ojt.controldata.co.th
     http:
       paths:
       - path: /
