--- a/cluster/nginx.yaml
+++ b/cluster/nginx.yaml
@@ -5,7 +5,7 @@ metadata:
   name: nginx
   namespace: nginx
   annotations:
-    konghq.com/protocol: "https"
+    konghq.com/protocol: "https,http"
 spec:
   ports:
   - name: http
@@ -23,7 +23,7 @@ metadata:
   annotations:
     konghq.com/https-redirect-status-code: "308"
     konghq.com/preserve-host: "true"
-    konghq.com/protocols: "https"
+    konghq.com/protocols: "https,http"
     konghq.com/strip-path: "true"
 spec:
   ingressClassName: kong
@@ -37,7 +37,7 @@ spec:
           service:
             name: nginx
             port:
-              number: 443
+              number: 80
 ---
 apiVersion: apps/v1
 kind: Deployment
