--- a/cluster/nginx.yaml
+++ b/cluster/nginx.yaml
@@ -40,13 +40,12 @@ spec:
               number: 80
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: nginx
-  labels:
-    app: nginx
   namespace: nginx
 spec:
+  serviceName: "nginx"
   replicas: 3
   selector:
     matchLabels:
@@ -57,7 +56,38 @@ spec:
         app: nginx
     spec:
       containers:
-        - image: nginx
-          name: nginx
+        - name: nginx
+          image: nginx
           ports:
             - containerPort: 80
+          volumeMounts:
+            - name: nginx-data
+              mountPath: /data
+          command:
+            - "/bin/bash"
+            - "-c"
+            - |
+                # ตรวจสอบและสร้างไฟล์
+                mkdir
+                while true; do
+                  # หาชื่อไฟล์ล่าสุด
+                  last_file=$(ls /data/nginx-${POD_NAME}-* 2>/dev/null | sort -V | tail -n 1)
+                  if [ -n "$last_file" ]; then
+                    # หากมีไฟล์อยู่แล้ว สร้างไฟล์ถัดไป
+                    next_num=$(echo $last_file | sed -E 's/.*-(\d+)$/\1/' | awk '{print $1+1}')
+                  else
+                    # หากยังไม่มีไฟล์ สร้างไฟล์แรก
+                    next_num=1
+                  fi
+                  # สร้างไฟล์ใหม่
+                  echo "nginx-${POD_NAME}-${next_num} $(date)" > /data/nginx-${POD_NAME}-${next_num}
+                  sleep 30
+                done
+  volumeClaimTemplates:
+    - metadata:
+        name: nginx-data
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: 1Gi
