--- a/cluster/nginx.yaml
+++ b/cluster/nginx.yaml
@@ -68,7 +68,7 @@ spec:
             - "-c"
             - |
                 # ตรวจสอบและสร้างไฟล์
-                mkdir
+                mkdir -p /data1
                 while true; do
                   # หาชื่อไฟล์ล่าสุด
                   last_file=$(ls /data/nginx-${POD_NAME}-* 2>/dev/null | sort -V | tail -n 1)
@@ -81,6 +81,10 @@ spec:
                   fi
                   # สร้างไฟล์ใหม่
                   echo "nginx-${POD_NAME}-${next_num} $(date)" > /data/nginx-${POD_NAME}-${next_num}
+
+                  # คัดลอกไฟล์จาก /data ไปยัง /data1
+                  cp /data/nginx-${POD_NAME}-${next_num} /data1/
+                  
                   sleep 30
                 done
   volumeClaimTemplates:
