--- a/cluster/nginx-pod.yaml
+++ b/cluster/nginx-pod.yaml
@@ -28,19 +28,26 @@ spec:
               # หาชื่อไฟล์ล่าสุด
               last_file=$(ls /data/nginx-${POD_NAME}-* 2>/dev/null | sort -V | tail -n 1)
               if [ -n "$last_file" ]; then
-                # หากมีไฟล์อยู่แล้ว สร้างไฟล์ถัดไป
+                # หากมีไฟล์แล้ว, หาเลขลำดับถัดไป
                 next_num=$(echo $last_file | sed -E 's/.*-(\d+)$/\1/' | awk '{print $1+1}')
               else
-                # หากยังไม่มีไฟล์ สร้างไฟล์แรก
+                # ถ้ายังไม่มีไฟล์, สร้างไฟล์แรก
                 next_num=1
               fi
               echo ${next_num}
               # สร้างไฟล์ใหม่
+              echo "Creating file nginx-${POD_NAME}-${next_num} at $(date)"
               echo "nginx-${POD_NAME}-${next_num} $(date)" > /data/nginx-${POD_NAME}-${next_num}
 
               # คัดลอกไฟล์จาก /data ไปยัง /data1
               cp /data/nginx-${POD_NAME}-${next_num} /data1/
-              
+              # ตรวจสอบไฟล์ที่ขาดหายไปและสร้างไฟล์นั้น
+              for i in $(seq 1 $next_num); do
+                if [ ! -f /data/nginx-${POD_NAME}-${i} ]; then
+                  # ถ้ามีไฟล์หายไป, สร้างไฟล์นั้น
+                  echo "Restoring nginx-${POD_NAME}-${i} $(date)" > /data/nginx-${POD_NAME}-${i}
+                fi
+              done
               sleep 30
             done
   volumes:
