--- a/cluster/nginx-pod.yaml
+++ b/cluster/nginx-pod.yaml
@@ -26,11 +26,11 @@ spec:
             counter=1
             while true; do
              # สร้างไฟล์ใหม่ใน /data
-              echo "Creating file nginx-${POD_NAME}-${next_num} at $(date)"
+              echo "Creating file nginx-${POD_NAME}-${counter} at $(date)"
               echo "nginx-${POD_NAME}-${counter} $(date)" > /data/nginx-${POD_NAME}-${counter}
               # คัดลอกไฟล์จาก /data ไปยัง /data1
               cp /data/nginx-${POD_NAME}-${counter} /data1/
-              echo "Created file nginx-${POD_NAME}-${next_num} at $(date)"
+              echo "Created file nginx-${POD_NAME}-${counter} at $(date)"
               # เพิ่มค่าของ counter เพื่อใช้เป็นลำดับถัดไป
               counter=$((counter+1))
               sleep 30
