--- a/cluster/nginx-pod.yaml
+++ b/cluster/nginx-pod.yaml
@@ -38,59 +38,59 @@
 #             name: nginx
 #             port:
 #               number: 80
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: nginx-data
-  namespace: nginx
-spec:
-  accessModes: [ "ReadWriteOnce" ]
-  resources:
-    requests:
-      storage: 1Gi
----              
-apiVersion: v1
-kind: Pod
-metadata:
-  name: nginx
-  labels:
-    app: pod
-  namespace: nginx
-spec:
-  containers:
-    - name: nginx
-      image: nginx
-      ports:
-        - containerPort: 80
-      volumeMounts:
-        - name: nginx-data
-          mountPath: /data
-      command:
-        - "/bin/bash"
-        - "-c"
-        - |
-            # รัน nginx และทำงานเพิ่มเติม
-            nginx & # รัน nginx เบื้องหลัง
-            # กำหนดชื่อ pod
-            POD_NAME=$(hostname)
-            # ตรวจสอบและสร้างไฟล์
-            mkdir -p /data1
-            # สร้างไฟล์ใหม่ทุกๆ 30 วินาที โดยไม่ต้องเช็คไฟล์ที่มีอยู่
-            counter=1
-            while true; do
-             # สร้างไฟล์ใหม่ใน /data
-              echo "Creating file nginx-${POD_NAME}-${counter} at $(date)"
-              echo "nginx-${POD_NAME}-${counter} $(date)" > /data/nginx-${POD_NAME}-${counter}
-              # คัดลอกไฟล์จาก /data ไปยัง /data1
-              cp /data/nginx-${POD_NAME}-${counter} /data1/
-              echo "Created file nginx-${POD_NAME}-${counter} at $(date)"
-              # เพิ่มค่าของ counter เพื่อใช้เป็นลำดับถัดไป
-              counter=$((counter+1))
-              sleep 30
-            done
-  volumes:
-    - name: nginx-data
-      persistentVolumeClaim:
-        claimName: nginx-data
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: nginx-data
+#   namespace: nginx
+# spec:
+#   accessModes: [ "ReadWriteOnce" ]
+#   resources:
+#     requests:
+#       storage: 1Gi
+# ---              
+# apiVersion: v1
+# kind: Pod
+# metadata:
+#   name: nginx
+#   labels:
+#     app: pod
+#   namespace: nginx
+# spec:
+#   containers:
+#     - name: nginx
+#       image: nginx
+#       ports:
+#         - containerPort: 80
+#       volumeMounts:
+#         - name: nginx-data
+#           mountPath: /data
+#       command:
+#         - "/bin/bash"
+#         - "-c"
+#         - |
+#             # รัน nginx และทำงานเพิ่มเติม
+#             nginx & # รัน nginx เบื้องหลัง
+#             # กำหนดชื่อ pod
+#             POD_NAME=$(hostname)
+#             # ตรวจสอบและสร้างไฟล์
+#             mkdir -p /data1
+#             # สร้างไฟล์ใหม่ทุกๆ 30 วินาที โดยไม่ต้องเช็คไฟล์ที่มีอยู่
+#             counter=1
+#             while true; do
+#              # สร้างไฟล์ใหม่ใน /data
+#               echo "Creating file nginx-${POD_NAME}-${counter} at $(date)"
+#               echo "nginx-${POD_NAME}-${counter} $(date)" > /data/nginx-${POD_NAME}-${counter}
+#               # คัดลอกไฟล์จาก /data ไปยัง /data1
+#               cp /data/nginx-${POD_NAME}-${counter} /data1/
+#               echo "Created file nginx-${POD_NAME}-${counter} at $(date)"
+#               # เพิ่มค่าของ counter เพื่อใช้เป็นลำดับถัดไป
+#               counter=$((counter+1))
+#               sleep 30
+#             done
+#   volumes:
+#     - name: nginx-data
+#       persistentVolumeClaim:
+#         claimName: nginx-data
 
